# navcodec

./: .gitignore  CMakeLists.txt  binding.gyp  index.js  package.json  webpack.config.js
lib/: avconv.js  navcodec.js
lib_src/: avconv.js  navcodec.js  stream.js  transcode.js
src/: navaudiofifo.cpp  navcodec.cpp  navcodec.h  navcodeccontext.cpp  navcodeccontext.h  navcodecid.cpp  navcodecid.h  navdictionary.cpp  navdictionary.h  navformat.cpp  navformat.h  navframe.cpp  navframe.h  navoutformat.cpp  navoutformat.h  navpixformat.cpp  navpixformat.h  navresample.cpp  navresample.h  navstream.cpp  navstream.h  navstreamreader.cpp  navstreamreader.h  navsws.cpp  navsws.h  navthumbnail.cpp  navthumbnail.h  navutils.h  relocatemoov.cpp  relocatemoov.h
test/: simple.test.js
